[gd_scene load_steps=80 format=2]

[ext_resource path="res://3MB.gd" type="Script" id=1]
[ext_resource path="res://Chemicals/3-methyl-1-butene-01.png" type="Texture" id=2]
[ext_resource path="res://ReactionsButtons/OxMButton.png" type="Texture" id=3]
[ext_resource path="res://ReactionsButtons/OxM_Pressed.png" type="Texture" id=4]
[ext_resource path="res://ReactionsButtons/OxM_Hover.png" type="Texture" id=5]
[ext_resource path="res://ReactionsButtons/OzonButton.png" type="Texture" id=6]
[ext_resource path="res://ReactionsButtons/Ozon_Pressed.png" type="Texture" id=7]
[ext_resource path="res://ReactionsButtons/Ozon_Hover.png" type="Texture" id=8]
[ext_resource path="res://ReactionsButtons/HydBorButton.png" type="Texture" id=9]
[ext_resource path="res://ReactionsButtons/HBro_Pressed.png" type="Texture" id=10]
[ext_resource path="res://ReactionsButtons/HBor_Hover.png" type="Texture" id=11]
[ext_resource path="res://ReactionsButtons/FRAButton.png" type="Texture" id=12]
[ext_resource path="res://ReactionsButtons/FRA_Pressed.png" type="Texture" id=13]
[ext_resource path="res://ReactionsButtons/FRA_Hover.png" type="Texture" id=14]
[ext_resource path="res://3MB-2HMB-OxM/0-01.png" type="Texture" id=15]
[ext_resource path="res://3MB-2HMB-OxM/1-01.png" type="Texture" id=16]
[ext_resource path="res://3MB-2HMB-OxM/2-01.png" type="Texture" id=17]
[ext_resource path="res://3MB-2HMB-OxM/3-01.png" type="Texture" id=18]
[ext_resource path="res://3MB-2HMB-OxM/4-01.png" type="Texture" id=19]
[ext_resource path="res://3MB-2HMB-OxM/5-01.png" type="Texture" id=20]
[ext_resource path="res://3MB-2HMB-OxM/6-01.png" type="Texture" id=21]
[ext_resource path="res://3MB-2HMB-OxM/7-01.png" type="Texture" id=22]
[ext_resource path="res://3MB-2HMB-OxM/8-01.png" type="Texture" id=23]
[ext_resource path="res://3MB-2HMB-OxM/9-01.png" type="Texture" id=24]
[ext_resource path="res://3MB-2HMB-OxM/10-01.png" type="Texture" id=25]
[ext_resource path="res://3MB-2HMB-OxM/11-01.png" type="Texture" id=26]
[ext_resource path="res://3MB-2HMB-OxM/12-01.png" type="Texture" id=27]
[ext_resource path="res://3MB-2HMB-OxM/13-01.png" type="Texture" id=28]
[ext_resource path="res://3MB-2HMB-OxM/14-01.png" type="Texture" id=29]
[ext_resource path="res://3MB-2HMB-OxM/15-01.png" type="Texture" id=30]
[ext_resource path="res://3MB-Form2MPal-Ozo/1-01.png" type="Texture" id=31]
[ext_resource path="res://3MB-Form2MPal-Ozo/2-01.png" type="Texture" id=32]
[ext_resource path="res://3MB-Form2MPal-Ozo/3-01.png" type="Texture" id=33]
[ext_resource path="res://3MB-Form2MPal-Ozo/4-01.png" type="Texture" id=34]
[ext_resource path="res://3MB-Form2MPal-Ozo/5-01.png" type="Texture" id=35]
[ext_resource path="res://3MB-Form2MPal-Ozo/6-01.png" type="Texture" id=36]
[ext_resource path="res://3MB-Form2MPal-Ozo/7-01.png" type="Texture" id=37]
[ext_resource path="res://3MB-Form2MPal-Ozo/8-01.png" type="Texture" id=38]
[ext_resource path="res://3MB-Form2MPal-Ozo/9-01.png" type="Texture" id=39]
[ext_resource path="res://3MB-Form2MPal-Ozo/10-01.png" type="Texture" id=40]
[ext_resource path="res://3MB-Form2MPal-Ozo/11-01.png" type="Texture" id=41]
[ext_resource path="res://3MB-Form2MPal-Ozo/12-01.png" type="Texture" id=42]
[ext_resource path="res://3MB-Form2MPal-Ozo/13-01.png" type="Texture" id=43]
[ext_resource path="res://3MB-Form2MPal-Ozo/14-01.png" type="Texture" id=44]
[ext_resource path="res://3MB-Form2MPal-Ozo/15-01.png" type="Texture" id=45]
[ext_resource path="res://3MB-Form2MPal-Ozo/16-01.png" type="Texture" id=46]
[ext_resource path="res://3MB-Form2MPal-Ozo/17-01.png" type="Texture" id=47]
[ext_resource path="res://3MB-Form2MPal-Ozo/18-01.png" type="Texture" id=48]
[ext_resource path="res://3MB-Form2MPal-Ozo/19-01.png" type="Texture" id=49]
[ext_resource path="res://3MB-Form2MPal-Ozo/20-01.png" type="Texture" id=50]
[ext_resource path="res://3MB-Form2MPal-Ozo/21-01.png" type="Texture" id=51]
[ext_resource path="res://3MB-Form2MPal-Ozo/22-01.png" type="Texture" id=52]
[ext_resource path="res://3MB-3MBoh-HBor/1-01.png" type="Texture" id=53]
[ext_resource path="res://3MB-3MBoh-HBor/2-01.png" type="Texture" id=54]
[ext_resource path="res://3MB-3MBoh-HBor/3-01.png" type="Texture" id=55]
[ext_resource path="res://3MB-3MBoh-HBor/4-01.png" type="Texture" id=56]
[ext_resource path="res://3MB-3MBoh-HBor/5-01.png" type="Texture" id=57]
[ext_resource path="res://3MB-3MBoh-HBor/6-01.png" type="Texture" id=58]
[ext_resource path="res://3MB-3MBoh-HBor/7-01.png" type="Texture" id=59]
[ext_resource path="res://3MB-1Br3MB-FRA/1-01.png" type="Texture" id=60]
[ext_resource path="res://3MB-1Br3MB-FRA/2-01.png" type="Texture" id=61]
[ext_resource path="res://3MB-1Br3MB-FRA/3-01.png" type="Texture" id=62]
[ext_resource path="res://3MB-1Br3MB-FRA/4-01.png" type="Texture" id=63]
[ext_resource path="res://3MB-1Br3MB-FRA/5-01.png" type="Texture" id=64]
[ext_resource path="res://3MB-1Br3MB-FRA/6-01.png" type="Texture" id=65]
[ext_resource path="res://3MB-1Br3MB-FRA/7-01.png" type="Texture" id=66]
[ext_resource path="res://3MB-1Br3MB-FRA/8-01.png" type="Texture" id=67]
[ext_resource path="res://3MB-1Br3MB-FRA/9-01.png" type="Texture" id=68]
[ext_resource path="res://3MB-1Br3MB-FRA/10-01.png" type="Texture" id=69]
[ext_resource path="res://3MB-1Br3MB-FRA/11-01.png" type="Texture" id=70]
[ext_resource path="res://3MB-1Br3MB-FRA/12-01.png" type="Texture" id=71]
[ext_resource path="res://3MB-1Br3MB-FRA/13.png" type="Texture" id=72]
[ext_resource path="res://3MB-1Br3MB-FRA/14.png" type="Texture" id=73]
[ext_resource path="res://3MB-1Br3MB-FRA/15-01.png" type="Texture" id=74]
[ext_resource path="res://3MB-1Br3MB-FRA/16-01.png" type="Texture" id=75]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "3MB-2HMB-OxM",
"speed": 1.5
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": false,
"name": "3MB-Form2MPal-Ozo",
"speed": 1.5
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": false,
"name": "3MB-3MBoh-HBor",
"speed": 1.5
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 75 ) ],
"loop": false,
"name": "3MB-1BrMB-FRA",
"speed": 1.5
} ]

[node name="3MB" type="TextureRect"]
margin_right = 900.0
margin_bottom = 650.0
script = ExtResource( 1 )

[node name="3MB" type="TextureRect" parent="."]
margin_right = 900.0
margin_bottom = 650.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Oxymercuration" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -409.0
margin_top = 540.0
margin_right = -228.0
margin_bottom = 627.0
rect_pivot_offset = Vector2( 83.9217, -0.117828 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Ozonolysis" type="TextureButton" parent="."]
margin_left = 253.25
margin_top = 540.0
margin_right = 434.25
margin_bottom = 625.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Hydroboration" type="TextureButton" parent="."]
margin_left = 465.75
margin_top = 540.0
margin_right = 646.75
margin_bottom = 627.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="FRA" type="TextureButton" parent="."]
margin_left = 678.25
margin_top = 540.0
margin_right = 859.25
margin_bottom = 622.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="3MB-2HMB-OxM" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 450, 325 )
frames = SubResource( 1 )
animation = "3MB-2HMB-OxM"

[node name="3MB-Form2MPal-Ozo" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "3MB-Form2MPal-Ozo"
centered = false

[node name="3MB-3MBoH-HBor" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
animation = "3MB-3MBoh-HBor"
centered = false

[node name="3MB-1Br3MB-FRA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
animation = "3MB-1BrMB-FRA"
centered = false

[node name="OxymercurationPopup" type="PopupPanel" parent="."]
margin_left = 37.3629
margin_top = 365.182
margin_right = 224.363
margin_bottom = 546.182

[node name="OzonolysisPopup" type="PopupPanel" parent="."]
margin_left = 290.541
margin_top = 380.176
margin_right = 400.541
margin_bottom = 524.176

[node name="HydroborationPopup" type="PopupPanel" parent="."]
margin_left = 503.811
margin_top = 386.358
margin_right = 610.811
margin_bottom = 521.358

[node name="FRAPopup" type="PopupPanel" parent="."]
margin_left = 711.0
margin_top = 389.0
margin_right = 833.0
margin_bottom = 526.0

[connection signal="mouse_entered" from="Oxymercuration" to="." method="_on_Oxymercuration_mouse_entered"]
[connection signal="mouse_exited" from="Oxymercuration" to="." method="_on_Oxymercuration_mouse_exited"]
[connection signal="pressed" from="Oxymercuration" to="." method="_on_Oxymercuration_pressed"]
[connection signal="mouse_entered" from="Ozonolysis" to="." method="_on_Ozonolysis_mouse_entered"]
[connection signal="mouse_exited" from="Ozonolysis" to="." method="_on_Ozonolysis_mouse_exited"]
[connection signal="pressed" from="Ozonolysis" to="." method="_on_Ozonolysis_pressed"]
[connection signal="mouse_entered" from="Hydroboration" to="." method="_on_Hydroboration_mouse_entered"]
[connection signal="mouse_exited" from="Hydroboration" to="." method="_on_Hydroboration_mouse_exited"]
[connection signal="pressed" from="Hydroboration" to="." method="_on_Hydroboration_pressed"]
[connection signal="mouse_entered" from="FRA" to="." method="_on_FRA_mouse_entered"]
[connection signal="mouse_exited" from="FRA" to="." method="_on_FRA_mouse_exited"]
[connection signal="pressed" from="FRA" to="." method="_on_FRA_pressed"]
